Fix course navbar alignment

--- a/courses/course.css
+++ b/courses/course.css
@@ -49,6 +49,7 @@ nav a {
     color: white;
     display: block;
     padding: 0.7em 2em;
+    line-height: 100%;
 }
 
 nav a:link { 
